Fix height, width and spacing issue for the card

--- a/css/style.css
+++ b/css/style.css
@@ -79,8 +79,8 @@ Layout Styles ==========
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    margin: 0 2em;
+    min-height: 100vh;
+    padding: 0 2em;
 }
 
 .component-card {
@@ -89,7 +89,6 @@ Layout Styles ==========
     background: #ffffff;
     border-radius: 1.25em;
     text-align: center;
-    min-width: 20.4375em;
     max-width: 28.125em;
     box-shadow: 0 40px 40px -20px rgba(13, 48, 189, 15.18%);
 }
@@ -169,12 +168,9 @@ Custom Styles ==========
 /* =====================
 Media Queries ==========
 */
-/* 480px */
 @media (min-width: 30em) {
     .container {
-        height: inherit;
-        margin: 0 2em;
-        padding: 3em 0;
+        padding: 2em;
     }
 
     .component-bg {
@@ -219,7 +215,6 @@ Media Queries ==========
 
 @media (min-height: 50em) {
     .container {
-        height: 100vh;
         padding: unset;
     }
 }
